--- a/package.json
+++ b/package.json
@@ -6,21 +6,26 @@
   "author": "Maxim Rozinkevich",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "dependencies": {
     "apollo-server-express": "^2.19.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
     "@types/graphql": "^14.5.0",
     "@types/node": "^14.14.12",
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
 }
