--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
   "port": 5432,
   "username": "postgres",
   "password": "postgres",
-  "database": "mydb",
+  "database": "tsgraphql",
   "synchronize": true,
   "logging": true,
   "entities": ["src/entity/*.*"]
